...
                android:minWidth="36dp"
                android:minHeight="36dp"
                app:srcCompat="@drawable/ic_menu"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDrawerLogin"
                style="@style/TextButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/portrait_secondary_margin"
                android:text="@string/drawer_sign_in_button_text" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
...
