...
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="17dp"
            android:text="Server URL"
            app:layout_constraintBottom_toTopOf="@+id/inputServerUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/HeadingStyle"
            />
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextServerUrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_server_url"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
...
