<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical" >
  <TextView
  	android:id="@+id/versionText"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:paddingLeft="20dp"
  	android:paddingRight="20dp"
  	android:textColor="@color/black"
  	android:textSize="21sp"/>
  <TextView
  	android:id="@+id/text1"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:background="#DDDDDD"
  	android:minHeight="?android:attr/listPreferredItemHeight"
  	android:paddingLeft="20dp"
  	android:paddingRight="20dp"
  	android:text="@+string/waiting_for_license"
  	android:textColor="@color/black"
  	android:textSize="21sp"
  	android:scrollbars="vertical"/>
</LinearLayout>
